--- a/css/font.css
+++ b/css/font.css
@@ -10,19 +10,32 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 /* poppins */
 @import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wdth,wght@125,100..800&family=Annie+Use+Your+Telescope&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-/* font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif; */
+
 .annie-use-your-telescope-regular {
   font-family: "Annie Use Your Telescope", cursive;
   font-weight: 200;
   font-style: normal;
 }
-
- /* <uniquifier>: Use a unique and descriptive class name
- <weight>: Use a value from 100 to 800 */
-
 .anek-latin {
   font-family: "Anek Latin", sans-serif;
   font-optical-sizing: auto;
   font-variation-settings:
     "wdth" 100;
+}
+
+
+
+/* 변수 설정 */
+:root{
+  /* 폰트 */
+
+  --title-XXL: 5vw;
+  --title-XL: ;
+  --title-L: ;
+  
+  --list-XXL: ;
+
+
+
+
 }
