--- a/css/pc2.css
+++ b/css/pc2.css
@@ -1,17 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap');
-.annie-use-your-telescope-regular {
-  font-family: "Annie Use Your Telescope", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-.anek-latin {
-  font-family: "Anek Latin", sans-serif;
-  /* font-optical-sizing: auto; */
-  font-variation-settings:
-    "wdth" 100;
-}
-
+  
 
 .section-1 {
   height: 56.25vw;
@@ -48,7 +37,7 @@
   color: #000000;
   text-align: left;
   font-family: "Anek Latin", sans-serif;
-  font-size: 5vw;
+  font-size: var(--title-XXL);
   line-height: 120%;
   font-weight: 800;
   left: 15.5vw; 
@@ -64,7 +53,7 @@
   border: 1px solid #000;
   border-radius: 72px;
   font-weight: 100;
-  padding: 1rem 10rem;
+  padding: 0.8333vw 8.3333vw;
   line-height: 0.8;
   display: inline-block;
 }
@@ -220,6 +209,7 @@
   border-bottom: 1px solid #000; /* 아래쪽 테두리 */
   box-sizing: border-box;
   pointer-events: none;
+  transition: opacity 0.3s ease;
 }
 
 .section-2 .grid::after {
@@ -605,7 +595,11 @@
     top: 111.245vw;
   }
 
-
+  .box-one .box-one {
+    background: url(../img/olive-img.JPG);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 /* 큰 박스 */
 
 /* 이미지가 들어가는 박스 */
@@ -631,10 +625,13 @@
   background-repeat: no-repeat;
 }
 .box-two .box-two {
-    background: url(../img/compose.jpg);
+    background: url(../img/project-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .box-three .box-three{
-  background: url(../img/compose.jpg);
+  background: url(../img/project-img.png);
+  background-repeat: no-repeat;
 }
 
 
@@ -706,31 +703,9 @@
   text-transform: uppercase;
   
 }
-/* .portfolio {
-  color: #000000;
-  text-align: left;
-  font-family: "Pretendard-Regular", sans-serif;
-  font-size: 64px;
-  font-weight: 400;
-  text-transform: uppercase;
-  position: absolute;
-  left: 60px;
-  top: 445px;
-}
-.kim-jae-hwan {
-  color: #000000;
-  text-align: left;
-  font-family: "Pretendard-Regular", sans-serif;
-  font-size: 64px;
-  font-weight: 400;
-  position: absolute;
-  left: 1424px;
-  top: 445px;
-} */
 
 .last-img{
   display: flex;
-
   gap: 8vw;
   justify-content: space-between;
   margin: 0 5.729vw;
