--- a/css/anima.css
+++ b/css/anima.css
@@ -47,6 +47,7 @@
 
 .section-3 .pofor-box-sm1 .bg-img-sm:hover{
   border-radius: 1.4583vw;
+
 }
 .section-3 .pofor-box-sm2 .bg-img-sm:hover{
   border-radius: 1.4583vw;
@@ -56,4 +57,16 @@
 }
 .catagory-list p:hover{
   border: 1px solid #000;
+}
+
+
+
+/* 스케일 업 애니메이션 */
+@keyframes scale-up {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
