--- a/css/font.css
+++ b/css/font.css
@@ -10,7 +10,10 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 /* poppins */
 @import url('https://fonts.googleapis.com/css2?family=Anek+Latin:wdth,wght@125,100..800&family=Annie+Use+Your+Telescope&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-
+/* Kdam Thmor Pro */
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+/* noto sans */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 .annie-use-your-telescope-regular {
   font-family: "Annie Use Your Telescope", cursive;
   font-weight: 200;
